# python-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  code_review.yml  staging_merge.yml
.github/workflows/composite/setup/: action.yml
migrations/: env.py
src/python_template/application/usecases/: __init__.py  completion_usecase.py  diagnostics_usecase.py  dictionary_usecase.py  directory_preprocessing_usecase.py  document_preprocessing_usecase.py  heuristic_diagnostics_usecase.py  hover_usecase.py  llama_knowledge_graph_usecase.py  llama_rag_usecase.py  nlp_entity_usecase.py  notion_preprocessing_usecase.py  word_completion_usecase.py
src/python_template/config/: container.py  database.py  logging.py  settings.py
src/python_template/domains/entities/: __init__.py  completions.py  diagnostics.py  documents.py  hover.py  meaning.py  nlp_entities.py  positions.py
src/python_template/domains/interfaces/: __init__.py  document_data_mapper.py  document_repository.py  embeddings.py  graph_store.py  llm.py  meaning_repository.py  nlp_clinet.py  nlp_entity_repository.py  page_reader.py  vector_store.py
src/python_template/domains/usecases/: __init__.py  completion_usecase.py  diagnostics_usecase.py  dictionary_usecase.py  document_preprocessing_usecase.py  hover_usecase.py  knowledge_graph_usecase.py  nlp_entity_usecase.py  rag_usecase.py  word_completion_usecase.py
src/python_template/infrastructures/interfaces/: __init__.py  directory_page_reader.py  file_document_repository.py  ginza_nlp_clinet.py  llama_azure_gpt4.py  llama_document_data_mapper.py  llama_gpt35_turbo.py  llama_gpt4.py  llama_gpt4_turbo.py  llama_gpt_finetune.py  llama_graph_store.py  llama_neo4j.py  llama_notion_page_reader.py  llama_openai_ada2_embeddings.py  llama_palm.py  llama_pgvector.py  llama_vertexai_embeddings.py  llama_weaviate.py  meaning_repository.py  nlp_entity_repository.py  yahoo_nlp_clinet.py
src/python_template/presentations/: application.py
src/python_template/presentations/apis/: __init__.py  completion.py  diagnostics.py  heuristic_diagnostics.py  hover.py  word_completion.py
src/python_template/presentations/clis/: index_notion.py  preprocess_directory.py  preprocess_document.py
src/python_template/presentations/middleware/: logging_context_route.py
src/python_template/presentations/schemas/: __init__.py  common.py  completion.py  diagnostics.py  hover.py  word_completion.py
